--- a/hello.html
+++ b/hello.html
@@ -51,6 +51,7 @@
             <br>Pasos: 
             <ul>
                 <li><span>git commit -m "Comandos git"</span></li>
+                <li><span>git commit -am "Guarda todos los archivos modificados y agrega un mensaje"</span></li>
                 
             </ul>
             <li>git status</li>
@@ -62,6 +63,13 @@
             </ul>
             <li>git push</li>
             Enviará nuestro directorio local y actualizara el repositorio de gitHub
+            <br>Pasos: 
+            <ul>
+                <li><span>git push</span></li>
+                
+            </ul>
+            <li>git pull</li>
+            Tomará el repositorio en gitHub y lo reemplazara por el local
             <br>Pasos: 
             <ul>
                 <li><span>git push</span></li>
