--- a/hello.html
+++ b/hello.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <h1>Wellcome to my WebPage</h1>
-    <h2>Aprenfiendo GitHub</h2>
+    <h2>Aprendiendo gitHub</h2>
     <div>Comandos Git
         <ol>
             <li>git clone <br>
@@ -73,7 +73,7 @@
             Tomará el repositorio en gitHub y lo reemplazara por el local
             <br>Pasos: 
             <ul>
-                <li><span>git push</span></li>
+                <li><span>git pull</span></li>
                 
             </ul>
         </ol>
