--- a/hello.html
+++ b/hello.html
@@ -62,7 +62,7 @@
                 
             </ul>
             <li>git push</li>
-            Enviará nuestro directorio local y actualizara el repositorio de gitHub
+            Enviará nuestro directorio local y actualizara el repositorio de gitHub.
             <br>Pasos: 
             <ul>
                 <li><span>git push</span></li>
@@ -72,7 +72,7 @@
             Tomará el repositorio en gitHub y lo reemplazara por el local
             <br>Pasos: 
             <ul>
-                <li><span>git push</span></li>
+                <li><span>git pull</span></li>
                 
             </ul>
         </ol>
