--- a/hello.html
+++ b/hello.html
@@ -75,7 +75,7 @@
             <br>Pasos: 
             <ul>
                 <li><span>git pull</span></li>
-                
+                <li>En caso de conflictos aparecerá "CONFLICT: merge conflict"</li>
             </ul>
         </ol>
     </div>
