add cambio de ramas

--- a/hello.html
+++ b/hello.html
@@ -115,6 +115,9 @@
                 <li><span>git  checkout -b name</span></li>
                 Crea una rama nueva de nombre "name" <br>
                 Activa la nueva rama para su uso
+                <li><span>git  checkout master</span></li>
+                Retorna a la rama principal o la que querramos llamar <br>
+                
             </ul>
         </ol>
     </div>
