--- a/hello.html
+++ b/hello.html
@@ -117,7 +117,8 @@
                 Activa la nueva rama para su uso
                 <li><span>git  checkout master</span></li>
                 Retorna a la rama principal o la que querramos llamar <br>
-                
+                <li><span>git  merge "rama2"</span></li>
+                Fusiona las ramas elegidas <br>
             </ul>
         </ol>
     </div>
