--- a/hello.html
+++ b/hello.html
@@ -120,7 +120,13 @@
                 <li><span>git  merge "rama2"</span></li>
                 Fusiona las ramas elegidas <br>
             </ul>
-        </ol>
+            <li>Button Fork</li>
+            Bifurcar repositorio: Hacer una copia propia a nuestro repositorio
+            <br>Ejemplo:  https://github.com/twbs/bootstrap
+            <li>GitHub Pages</li>
+            Crear un nuevo repositorio y agregar extension".github.io"
+            <br>Ejemplo:  
+            </ol>
     </div>
 </body>
 </html>
